--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>spring-context-support</artifactId>
       <version>${spring.ver}</version>
     </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjtools</artifactId>
+      <version>1.6.2</version>
+    </dependency>
   </dependencies>
 
   
