--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
       <artifactId>aspectjtools</artifactId>
       <version>1.6.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.5</version>
+    </dependency>
+
   </dependencies>
 
   
